# node-jerryscript

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.Jerry  README.md  common.gypi  configure  configure.py  node.gyp  node.gypi  test_hello.cpp  v8.gyp  v8env.h  v8jerry.cpp
lib/: _http_agent.js  _http_client.js  _http_common.js  _http_incoming.js  _http_outgoing.js  _http_server.js  _stream_duplex.js  _stream_passthrough.js  _stream_readable.js  _stream_transform.js  _stream_wrap.js  _stream_writable.js  _tls_common.js  _tls_legacy.js  _tls_wrap.js  assert.js  async_hooks.js  buffer.js  child_process.js  cluster.js  console.js  constants.js  crypto.js  dgram.js  dns.js  domain.js  events.js  fs.js  http.js  http2.js  https.js  inspector.js  module.js  net.js  os.js  path.js  perf_hooks.js  process.js  punycode.js  querystring.js  (+13 more)
lib/internal/: async_hooks.js  bootstrap_node.js  buffer.js  child_process.js  encoding.js  errors.js  freelist.js  fs.js  histogram.js  http.js  linkedlist.js  module.js  net.js  os.js  process.js  querystring.js  readline.js  repl.js  safe_globals.js  socket_list.js  trace_events_async_hooks.js  url.js  util.js  v8_prof_polyfill.js  v8_prof_processor.js  worker.js  wrap_js_stream.js
lib/internal/assert/: calltracker.js
lib/internal/bootstrap/: loaders.js
lib/internal/cluster/: child.js  master.js  round_robin_handle.js  shared_handle.js  utils.js  worker.js
lib/internal/fs/: promises.js
lib/internal/http2/: compat.js  core.js  util.js
lib/internal/loader/: Loader.js  ModuleJob.js  ModuleMap.js  ModuleRequest.js  ModuleWrap.js  search.js
lib/internal/modules/esm/: resolve.js
lib/internal/per_context/: primordials.js
lib/internal/policy/: manifest.js
lib/internal/process/: next_tick.js  per_thread.js  promises.js  stdio.js  warning.js  write-coverage.js
lib/internal/source_map/: source_map.js  source_map_cache.js
lib/internal/streams/: BufferList.js  destroy.js  lazy_transform.js  legacy.js
lib/internal/test/: unicode.js
lib/internal/util/: inspect.js  types.js
lib/internal/vm/: module.js
packaging/: node-jerry.spec
src/: CMakeLists.txt  env.cc  env.h  node.cc  node_crypto.cc  node_file.cc  node_internals.h  node_main.cc  node_v8_platform-inl.h  v8jerry.cpp  v8jerry_callback.cpp  v8jerry_callback.hpp  v8jerry_context.hpp  v8jerry_handlescope.cpp  v8jerry_handlescope.hpp  v8jerry_isolate.cpp  v8jerry_isolate.hpp  v8jerry_platform.hpp  v8jerry_templates.cpp  v8jerry_templates.hpp  v8jerry_utils.cpp  v8jerry_utils.hpp  v8jerry_value.cpp  v8jerry_value.hpp
src/inspector/: node_inspector.gypi
test/common/: index.js
tests/: CMakeLists.txt  arraybuffer.cpp  assert.h  handle_scope.cpp  local_alloc.cpp  object.cpp  object_template.cpp  string.cpp  v8env.h  value.cpp
tools/: install.py
tools/nodejerry/uv/patches/: add-checking-if-empty-queue.patch
